// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> checkbox renders correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-kvAqsT ghVUiJ sc-cdtKKh bQZlMA"
    data-checked="false"
    data-indeterminate="false"
    data-testid="checkbox"
    name="test"
  />
</DocumentFragment>
`;

exports[`<Input /> email renders correctly 1`] = `
<DocumentFragment>
  <input
    class="sc-cLrhaH cbZXBu"
    cursor="pointer"
    name="test"
    placeholder="Placeholder"
    type="email"
    width="100%"
  />
</DocumentFragment>
`;

exports[`<Input /> renders correctly 1`] = `
<DocumentFragment>
  <input
    class="sc-cLrhaH cbZXBu"
    cursor="pointer"
    name="test"
    placeholder="Placeholder"
    width="100%"
  />
</DocumentFragment>
`;

exports[`<Input /> renders correctly 2`] = `
<DocumentFragment>
  <input
    class="sc-cLrhaH cbZXBu"
    cursor="pointer"
    name="test"
    placeholder="Placeholder"
    type="password"
    width="100%"
  />
</DocumentFragment>
`;

exports[`<Input /> textarea renders correctly 1`] = `
<DocumentFragment>
  <textarea
    class="sc-jWWaec jWWOkQ"
    cursor="pointer"
    name="test"
    placeholder="Placeholder"
    width="100%"
  />
</DocumentFragment>
`;
